adding first sub-level page
using markupsafe to get variables from urls

added strategy/fundamentals.html

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='img/icons/vtes.svg') }}">
+	<scrip src="{{ url_for('static', filename='js/dC.js') }}"></script>
     <title>Codex of the Damned</title>
 </head>
 <body>
