--- a/templates/strategy/index.html
+++ b/templates/strategy/index.html
@@ -5,12 +5,12 @@
         This section explores <strong>Vampire: the Eternal Struggle</strong> strategy in some details.
     </p>
     <ul>
-        <li><a href="fundamentals.html">Fundamentals</a> gives general tips and advices.</li>
-        <li><a href="combat.html">Combat</a> explains combat in detail.</li>
-        <li><a href="bloat.html">Bloat</a> details the different strategies to gain pool during a game.</li>
-        <li><a href="deck-building.html">Deck building</a> gives some tools toward deck building.</li>
-        <li><a href="archetypes.html">Archetypes</a> is an introduction to the different deck archetypes.</li>
-        <li><a href="table-talk.html">Table Talk</a> presents negociation strategies and tips.</li>
+        <li><a href="fundamentals">Fundamentals</a> gives general tips and advices.</li>
+        <li><a href="combat">Combat</a> explains combat in detail.</li>
+        <li><a href="bloat">Bloat</a> details the different strategies to gain pool during a game.</li>
+        <li><a href="deck-building">Deck building</a> gives some tools toward deck building.</li>
+        <li><a href="archetypes">Archetypes</a> is an introduction to the different deck archetypes.</li>
+        <li><a href="table-talk">Table Talk</a> presents negociation strategies and tips.</li>
     </ul>
     <h2>Black Chantry Sabbat pre-constructed decks guides</h2>
     <ul>
