Fixing path to icons
Used jinja2 function to reach static files

--- a/templates/strategy/fundamentals.html
+++ b/templates/strategy/fundamentals.html
@@ -113,9 +113,9 @@
             <i>r</i> has the most options, but other disciplines offer good modifiers,
             like <i>m</i> <span class="card" onclick="dC('madrigal')">Madrigal</span> or
             <i>?</i> <span class="card" onclick="dC('hallofhadescourt')">Hall of Hades' Court</span>, as do some clans
-            like the Ventrue <img src="../icons/clan-ventrue.svg"> with
+            like the Ventrue <img src="{{ url_for('static', filename='img/icons/clan-ventrue.svg') }}"> with
             <span class="card" onclick="dC('ventrueheadquarters')">Ventrue Headquarters</span>
-            or the Followers of Set <img src="../icons/clan-followers-of-set.svg"> with
+            or the Followers of Set <img src="{{ url_for('static', filename='img/icons/clan-followers-of-set.svg') }}"> with
             <span class="card" onclick="dC('ferraille')">Ferraille</span>.
         </li>
         <li>
@@ -134,15 +134,15 @@
         <li>
             Using an effect to give votes to all members of clan, like
             <span class="card" onclick="dC('legacyofpander')">Legacy of Pander</span>
-            (<img src="../icons/clan-pander.svg">),
+            (<img src="{{ url_for('static', filename='img/icons/clan-pander.svg') }}">),
             <span class="card" onclick="dC('eldestarekholothe')">The Eldest Are Kholo</span>
-            (<img src="../icons/clan-ravnos.svg">),
+            (<img src="{{ url_for('static', filename='img/icons/clan-ravnos.svg') }}">),
             <span class="card" onclick="dC('foundationexhibit')">Foundation Exhibit</span>
-            (<img src="../icons/clan-toreador-anti.svg">),
+            (<img src="{{ url_for('static', filename='img/icons/clan-toreador-anti.svg') }}">),
             <span class="card" onclick="dC('conductor')">Conductor</span>
-            (<img src="../icons/clan-daughters.svg">) or
+            (<img src="{{ url_for('static', filename='img/icons/clan-daughters.svg') }}">) or
             <span class="card" onclick="dC('amaravati')">Amaravati</span>
-            (<img src="../icons/clan-assamite.svg">).
+            (<img src="{{ url_for('static', filename='img/icons/clan-assamite.svg') }}">).
             This needs to be combined with ways to bring many vampires of that clan into play,
             using actions like <span class="card" onclick="dC('embracethe')">The Embrace</span> or Master cards like
             <span class="card" onclick="dC('effectivemanagement')">Effective Management</span> or
@@ -320,7 +320,7 @@
     </p>
     <p>
         <span class="card" onclick="dC('carltonvanwyk')">Carlton Van Wyk</span>,
-        <span class="card" onclick="dC('ponticulus')">Ponticulus</span> (<img src="../icons/clan-tremere.svg">) and
+        <span class="card" onclick="dC('ponticulus')">Ponticulus</span> (<img src="{{ url_for('static', filename='img/icons/clan-tremere.svg') }}">) and
         <span class="card" onclick="dC('harzomatuili')">Harzomatuili</span> (Cardinal or Regent)
         deserve a special mention: they include a permanent intercept bonus plus their combat abilities
         is great and allow them to hinder the opponents all by themselves.
@@ -351,18 +351,18 @@
             </li>
             <li>
                     <span class="card" onclick="dC('marketsquare')">Market Square</span>
-                    (<img src="../icons/clan-assamite.svg">)
+                    (<img src="{{ url_for('static', filename='img/icons/clan-assamite.svg') }}">)
             </li>
             <li>
                     <span class="card" onclick="dC('informationnetwork')">Information Network</span>
-                    (<img src="../icons/clan-nosferatu-anti.svg">)
+                    (<img src="{{ url_for('static', filename='img/icons/clan-nosferatu-anti.svg') }}">)
             </li>
             <li>
-                <span class="card" onclick="dC('ponticulus')">Ponticulus</span> (<img src="../icons/clan-tremere.svg">)
+                <span class="card" onclick="dC('ponticulus')">Ponticulus</span> (<img src="{{ url_for('static', filename='img/icons/clan-tremere.svg') }}">)
             </li>
             <li>
                     <span class="card" onclick="dC('saatetta')">Saatet-ta</span>
-                    (<img src="../icons/clan-followers-of-set.svg">)
+                    (<img src="{{ url_for('static', filename='img/icons/clan-followers-of-set.svg') }}">)
             </li>
             <li>
                     <span class="card" onclick="dC('unmaskingthe')">The Unmasking</span>
@@ -396,11 +396,11 @@
             </li>
             <li>
                 <span class="card" onclick="dC('razorbat')">Razor Bat</span>
-                (<img src="../icons/clan-gargoyle.svg">)
+                (<img src="{{ url_for('static', filename='img/icons/clan-gargoyle.svg') }}">)
             </li>
             <li>
                 <span class="card" onclick="dC('defenderofthehaven')">Defender of the Haven</span>
-                (<img src="../icons/clan-gargoyle.svg">)
+                (<img src="{{ url_for('static', filename='img/icons/clan-gargoyle.svg') }}">)
             </li>
             <li>
                 <span class="card" onclick="dC('nosecretsfromthemagaji')">
@@ -414,11 +414,11 @@
             </li>
             <li>
                 <span class="card" onclick="dC('revenant')">Revenant</span>
-                (<img src="../icons/clan-tzimisce.svg">)
+                (<img src="{{ url_for('static', filename='img/icons/clan-tzimisce.svg') }}">)
             </li>
             <li>
                 <span class="card" onclick="dC('sightbeyondsight')">Sight Beyond Sight</span>
-                (<img src="../icons/clan-salubri.svg">)
+                (<img src="{{ url_for('static', filename='img/icons/clan-salubri.svg') }}">)
             </li>
             <li>
                 <span class="card" onclick="dC('shaman')">Shaman</span>
@@ -426,15 +426,15 @@
             </li>
             <li>
                 <span class="card" onclick="dC('kumpania')">Kumpania</span>
-                (<img src="../icons/clan-ravnos.svg">)
+                (<img src="{{ url_for('static', filename='img/icons/clan-ravnos.svg') }}">)
             </li>
             <li>
                 <span class="card" onclick="dC('ephor')">Ephor</span>
-                (<img src="../icons/clan-ventrue.svg">)
+                (<img src="{{ url_for('static', filename='img/icons/clan-ventrue.svg') }}">)
             </li>
             <li>
                 <span class="card" onclick="dC('ancestorstalismanthe')">The Ancestors Talisman</span>
-                (<img src="../icons/clan-assamite.svg">)
+                (<img src="{{ url_for('static', filename='img/icons/clan-assamite.svg') }}">)
             </li>
         </ul>
     </div>
