Fixing relative links
Fixing links in the navbar

--- a/templates/strategy/fundamentals.html
+++ b/templates/strategy/fundamentals.html
@@ -453,7 +453,7 @@
 
 {% block footer %}
     <nav role="navigation">
-        <a href="index.html">Strategy</a>
-        <a class="next" href="combat.html">Combat</a>
+        <a href="/strategy">Strategy</a>
+        <a class="next" href="/strategy/combat">Combat</a>
     </nav>
 {% endblock %}
