--- a/templates/strategy/index.html
+++ b/templates/strategy/index.html
@@ -14,10 +14,10 @@
     </ul>
     <h2>Black Chantry Sabbat pre-constructed decks guides</h2>
     <ul>
-        <li><a href="deck-guides/den-of-fiends.html">Den of Fiends</a></li>
-        <li><a href="deck-guides/libertine-ball.html">Libertine Ball</a></li>
-        <li><a href="deck-guides/pact-with-nephandi.html">Pact with Nephandi</a></li>
-        <li><a href="deck-guides/parliament-of-shadows.html">Parliament of Shadows</a></li>
+        <li><a href="deck-guides/den-of-fiends">Den of Fiends</a></li>
+        <li><a href="deck-guides/libertine-ball">Libertine Ball</a></li>
+        <li><a href="deck-guides/pact-with-nephandi">Pact with Nephandi</a></li>
+        <li><a href="deck-guides/parliament-of-shadows">Parliament of Shadows</a></li>
     </ul>
     <h2>Black Chantry "First Blood" pre-constructed decks guides</h2>
     <p>
