--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='img/icons/vtes.svg') }}">
 	<script src="{{ url_for('static', filename='js/dC.js') }}"></script>
+	<script src="{% block script %}{% endblock %}"></script>
     <title>Codex of the Damned</title>
 </head>
 <body>
