--- a/templates/strategy/combat.html
+++ b/templates/strategy/combat.html
@@ -13,9 +13,9 @@
         Combat does not help reducing the prey's pool, at least not directly.
         The core principle of combat is <strong>bruise</strong>: reducing its opponents blood amount.
         It forces the minions to hunt or stay in torpor,
-        seriously reducing <a href="../strategy/fundamentals.html#AB">A&B</a>.
+        seriously reducing <a href="{{ url_for('template_strategy', sub_page='fundamentals', _anchor='AB') }}">A&B</a>.
         As a bonus, reducing the blood amount on the table means diminishing the effectivness of
-        <a href="bloat.html#leeching">leeching</a> techniques.
+        <a href="{{ url_for('template_strategy', sub_page='bloat', _anchor='leeching') }}">leeching</a> techniques.
     </p>
     <p>
         So the main focus of any combat module is to improve or prevent bruise, <em>ie.</em> blood consumption.
