--- a/templates/strategy/combat.html
+++ b/templates/strategy/combat.html
@@ -6,7 +6,7 @@
         <span class="card" onclick="dC('bumsrush')">Bum’s Rush</span>:
         Because of this card, other actions with similar effects are commonly called <strong>rush actions</strong>.
         It also gave its name to an entire archetype: the
-        <a href="archetypes.html#rush">rush decks</a>.
+        <a href="{{ url_for('template_strategy', sub_page='archetypes', _anchor='rush') }}">rush decks</a>.
     </p>
     <h2 id="bruise">Bruise</h2>
     <p>
