--- a/codex/strategy/templates/fundamentals.html
+++ b/codex/strategy/templates/fundamentals.html
@@ -1,4 +1,11 @@
 {% extends "layout.html" %}
+
+{% block head %}
+    {{ super() }}
+    <!-- Adding needed scripts -->
+    <script src="{{ url_for('static', filename='js/dC.js') }}"></script>
+{% endblock %}
+
 {% block content %}
     <h1>Fundamentals</h1>
     <h2 id="bleed">Bleed</h2>
