--- a/codex/strategy/templates/index_strategy.html
+++ b/codex/strategy/templates/index_strategy.html
@@ -1,4 +1,11 @@
 {% extends "layout.html" %}
+
+{% block head %}
+    {{ super() }}
+    <!-- Adding needed scripts -->
+    <!-- No needed script -->
+{% endblock %}
+
 {% block content %}
     <h1>Strategy</h1>
     <p>
