--- a/codex/strategy/templates/table-talk.html
+++ b/codex/strategy/templates/table-talk.html
@@ -1,4 +1,11 @@
 {% extends "layout.html" %}
+
+{% block head %}
+    {{ super() }}
+    <!-- Adding needed scripts -->
+    <script src="{{ url_for('static', filename='js/dC.js') }}"></script>
+{% endblock %}
+
 {% block content %}
     <h1 id="bloat">Table talk</h1>
     <p>
