adding archetypes.index

--- a/codex/strategy/templates/index_strategy.html
+++ b/codex/strategy/templates/index_strategy.html
@@ -57,6 +57,6 @@
 <nav role="navigation">
     <a class="prev" href="../card-search/index.html">Card Search</a>
     <a href="/">Home</a>
-    <a class="next" href="../archetypes/index.html">Archetypes</a>
+    <a class="next" href="{{ url_for('archetypes.index') }}">Archetypes</a>
 </nav>
 {% endblock %}
