--- a/codex/templates/layout.html
+++ b/codex/templates/layout.html
@@ -23,7 +23,7 @@
         <ul>
             <li><a href="{{ url_for('index') }}">{{ _('Home') }}</a></li>
             <li><a href="{{ url_for('strategy.index') }}">{{ _('Strategy') }}</a></li>
-            <li><a href="{# {{ url_for('archetypes.index') }} ##}">{{ _('Archetypes') }}</a></li>
+            <li><a href="{{ url_for('archetypes.index') }}">{{ _('Archetypes') }}</a></li>
             <li><a href="best-cards/index.html">{{ _('Best Cards') }}</a></li>
             <li><a href="deck-search/index.html">{{ _('Deck Search') }}</a></li>
             <li><a href="card-search/index.html">{{ _('Card Search') }}</a></li>
