--- a/codex/strategy/templates/index_strategy.html
+++ b/codex/strategy/templates/index_strategy.html
@@ -55,7 +55,7 @@
 
 {% block footer %}
 <nav role="navigation">
-    <a class="prev" href="../card-search/index.html">Card Search</a>
+    <!-- <a class="prev" href="../card-search/index.html">Card Search</a> -->
     <a href="/">Home</a>
     <a class="next" href="{{ url_for('archetypes.index') }}">Archetypes</a>
 </nav>
