--- a/codex/archetypes/templates/index_archetypes.html
+++ b/codex/archetypes/templates/index_archetypes.html
@@ -29,7 +29,7 @@
     <table class="wide-column">
         <tbody>
             <tr>
-                <td><a href="aaa.html">AAA</a></td>
+                <td><a href="{{ url_for('archetypes.index', sub_page='aaa') }}">AAA</a></td>
                 <td>(Toolbox)</td>
             </tr>
             <tr>
