Updating pentextmsubversion following gist 0521

--- a/codex/archetypes/templates/layout-erratum.html
+++ b/codex/archetypes/templates/layout-erratum.html
@@ -1,10 +1,19 @@
-{% macro pentextmsubversion() -%}
+{% macro pentextmsubversion( solution = "remove" ) -%}
+{% if solution == 'remove' %}
 <p>
     <span class="card" onclick="dC('pentextmsubversion')">Pentex™ Subversion</span>
     has been modified by an <em>errata</em> in September 2019.
     It does not prevent a vampire to act anymore, so it is less powerful and should probably
     not be included in the deck.
 </p>
+{% else %}
+<p>
+    <span class="card" onclick="dC('pentextmsubversion')">Pentex™ Subversion</span>
+    has been modified by an <em>errata</em> in September 2019.
+    It does not prevent a vampire to act anymore, so it is less powerful but still has its place in the deck,
+    as it was mainly used as a way to disable a blocker anyway.
+</p>
+{% endif %}
 {%- endmacro %}
 
 {% macro villein() -%}
