--- a/codex/archetypes/templates/layout-archetypes.html
+++ b/codex/archetypes/templates/layout-archetypes.html
@@ -25,3 +25,11 @@
 
 	{% block errata %}{% endblock %}
 {% endblock %}
+
+{% block footer %}
+<nav role="navigation">
+	{% block previous %}{% endblock%}
+	<a href=" {{url_for('archetypes.index') }}">Archetypes</a>
+	{% block next %}{% endblock %}
+</nav>
+{% endblock %}
